--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@ function Divide()
 
 			<ul data-role="listview" data-inset="true" data-filter="true" >
 	<li><a href="#" >Alok</a></li>
-	<li><a href="#" >srujan</a></li>
+	<li><a href="#" >srujan simha</a></li>
 	<li><a href="#" >phani</a></li>
+</ul>
 	<h1><center>Hello !!</center> </h1>
 	<p>This is an application for a simple calculator.</p>
 	<center>
@@ -65,8 +66,6 @@ function Divide()
 	<input type ="button" value = "Divide" onclick = "Divide()"/>
 	<br>
 	<div id ="box"> </div>
-
-</ul>
 	</div><!-- /content -->
 
 </div><!-- /page -->
