--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html><head> 
 	<title>MY APPLICATION</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1" > 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" >
-	<script src="http://code.jquery.com/jquery-1.7.1.min.js" ></script>
-	<script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js" ></script>
-	<script type ="text/javascript">
+	<link rel="stylesheet" href="jquery.mobile-1.1.1/jquery.mobile-1.1.1.min.css" />
+	<script src="jquery-1.8.1.js"></script>
+	<script src="jquery.mobile-1.1.1/jquery.mobile-1.1.1.min.js"></script>
 var x = 0;
 var y = 0;
 var z = 0;
