--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="jquery.mobile-1.1.1/jquery.mobile-1.1.1.min.css" />
 	<script src="jquery-1.8.1.js"></script>
 	<script src="jquery.mobile-1.1.1/jquery.mobile-1.1.1.min.js"></script>
+	<script type="text/javascript"></script>
 var x = 0;
 var y = 0;
 var z = 0;
