--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head> 
-	<title>MY APPLICATION</title> 
+	<title>MY APP</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1" > 
 	<link rel="stylesheet" href="jquery.mobile-1.1.1/jquery.mobile-1.1.1.min.css" />
 	<script src="jquery-1.8.1.js"></script>
